syntax = "proto3";

package api;

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/center/api";

import "lib/common/base.proto";
import "lib/types/metadata.proto";
import "google/protobuf/empty.proto";


message MetaDataSaveRequest {
    api.protobuf.Organization     owner        = 1;
    types.MetaDataSummary         meta_summary = 2;
    repeated types.MetadataColumn column_meta  = 3;
}

message RevokeMetaDataRequest {
  // 元数据拥有者
    api.protobuf.Organization owner        = 1;
    string                    meta_data_id = 2;
}

// 获取元数据摘要列表响应参数
message MetaDataSummaryListResponse {
  // 摘要信息列表
    repeated MetaDataSummaryOwner metadata_summaries = 1;
}

message MetaDataSummaryOwner {
  // 元数据的拥有者
    api.protobuf.Organization owner = 1;
  // 元文件摘要主体
    types.MetaDataSummary information = 2;
}

// 根据状态获取元数据摘要列表
message MetaDataSummaryByStateRequest {
    string state = 1;
}

// 根据状态查询元数据摘要列表响应参数
message MetaDataSummaryByStateResponse {
    repeated MetaDataSummaryOwner metadata = 1;
}

message Metadata {
    api.protobuf.Organization     owner                = 1;
    types.MetaDataSummary         meta_summary         = 2;
    repeated types.MetadataColumn metadata_columns = 3;
}

message MetadataListRequest {
    uint64 last_update_time = 1;
}

message MetadataListResponse {
    repeated Metadata metadatas    = 1;
    uint64            last_update_time = 2;
}

message MetadataByIdRequest {
    string metadata_id = 1;
}

message MetadataByIdResponse {
    Metadata metadata = 1;
}

service MetaDataService {

  // 保存元数据
  rpc MetaDataSave (MetaDataSaveRequest) returns (api.protobuf.SimpleResponse);

  // 查看全部元数据摘要列表 (不包含 列字段描述)，状态为可用
  rpc GetMetaDataSummaryList (google.protobuf.Empty) returns (MetaDataSummaryListResponse);

  // 新增：元数据详细列表（用于将数据同步给管理台，考虑checkpoint同步点位）
  rpc GetMetadataList(MetadataListRequest) returns (MetadataListResponse);

  // 新增，根据元数据ID查询元数据详情
  rpc GetMetadataById(MetadataByIdRequest) returns (MetadataByIdResponse);

  // 撤销元数据 (从底层网络撤销)
  rpc RevokeMetaData (RevokeMetaDataRequest) returns (api.protobuf.SimpleResponse);
}
